--- a/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
+++ b/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
@@ -1,5 +1,7 @@
-<mat-card clas="mb-12">
+<mat-card class="mb-8">
   <span class="text-xl">{{title}}</span>
 </mat-card>
 
-<ng-content></ng-content>
+<section class="mx-4">
+  <ng-content></ng-content>
+</section>
