--- a/src/app/shared/layout/layout-main/options/app-settings/app-settings.component.html
+++ b/src/app/shared/layout/layout-main/options/app-settings/app-settings.component.html
@@ -1,12 +1,12 @@
 <p>
   <mat-form-field appearance="legacy">
     <mat-label>Legacy form field</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="Placeholder" [(value)]="legacy">
     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
     <mat-hint>Hint</mat-hint>
   </mat-form-field>
 </p>
-<p>
+<!-- <p>
   <mat-form-field appearance="standard">
     <mat-label>Standard form field</mat-label>
     <input matInput placeholder="Placeholder">
@@ -29,4 +29,4 @@
     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
     <mat-hint>Hint</mat-hint>
   </mat-form-field>
-</p>
+</p> -->
