--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,6 @@
 @import "@angular/material/prebuilt-themes/purple-green.css";
 // @import "@angular/material/prebuilt-themes/indigo-pink.css";
 // // @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+
+@import "~@fortawesome/fontawesome-free/css/all.css";
