--- a/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
+++ b/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
@@ -1,6 +1,10 @@
 <mat-card class="mb-8">
-  <span class="text-xl">{{title}}</span>
+  <span class="text-2xl font-semibold text-white-200">{{title}}</span>
 </mat-card>
+
+<!-- <section class="px-8 mb-8">
+  <span class="text-2xl font-semibold text-blue-500">{{title}}</span>
+</section> -->
 
 <section class="mx-4">
   <ng-content></ng-content>
