--- a/src/app/shared/layout/layout-main/toolbar/toolbar.component.html
+++ b/src/app/shared/layout/layout-main/toolbar/toolbar.component.html
@@ -7,27 +7,7 @@
     <mat-icon>menu</mat-icon>
   </button>
 
-  <ol class="mx-20" class="flex flex-row flex-no-wrap  ml-12">
-    <li fxLayoutAlign="start center">
-      <a href="javascript:void(0)" fxLayoutAlign="start center" class="text-sm text-gray-500 hover:text-gray-200">
-        <mat-icon class="mr-1">home</mat-icon>
-        <span class="border-opacity-50">Home</span>
-      </a>
-    </li>
-
-    <li fxLayoutAlign="start center" class="mx-2">
-      <span fxLayoutAlign="start center" class="text-sm text-gray-500">
-        >
-      </span>
-    </li>
-
-    <li fxLayoutAlign="start center">
-      <a href="javascript:void(0)" fxLayoutAlign="start center" class="text-sm text-gray-500 hover:text-gray-200">
-        <mat-icon class="mr-1">business_center</mat-icon>
-        <span class="border-opacity-50">About</span>
-      </a>
-    </li>
-  </ol>
+ <app-breadcrumb class="flex flex-row flex-no-wrap  ml-12"></app-breadcrumb>
 
   <span class="example-spacer"></span>
   <!-- <mat-form-field class="example-form-field">
