--- a/src/app/main/pages/member/dashboard/dashboard.component.html
+++ b/src/app/main/pages/member/dashboard/dashboard.component.html
@@ -1,14 +1,15 @@
 <app-page title="Dashboard">
 
 
-<section fxLayout="row wrap" fxLayoutGap="20px">
-  <mat-card class="dashboard-tile" fxFlex *ngFor="let i of [1,2,3,4]">
+<section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
+  <mat-card class="dashboard-tile mb-8" fxFlex="0 0 calc(25%-20px)" *ngFor="let productContext of productContexts">
     <mat-card-header>
-      <mat-icon mat-card-avatar class="header-icon">fullscreen</mat-icon>
+      <mat-icon mat-card-avatar class="header-icon" [fontSet]="productContext.fontSet" [fontIcon]="productContext.icon"></mat-icon>
+
 
       <!-- <div mat-card-avatar class="example-header-image"></div> -->
-      <mat-card-title>Medicaid</mat-card-title>
-      <mat-card-subtitle>Eligibility</mat-card-subtitle>
+      <mat-card-title>{{productContext.name}}</mat-card-title>
+      <mat-card-subtitle>{{productContext.stage}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
@@ -19,8 +20,8 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <!-- <button mat-button>LIKE</button> -->
+      <button mat-button>SMART ACTIONS</button>
     </mat-card-actions>
   </mat-card>
 
