--- a/src/app/shared/layout/layout-main/options/app-settings/app-settings.component.html
+++ b/src/app/shared/layout/layout-main/options/app-settings/app-settings.component.html
@@ -1,6 +1,6 @@
 <app-page title="Settings">
 
-  <p class="flex flex-col">
+  <p class="flex flex-col mr-4">
     <!-- <span class="text-2xl font-semibold text-white-200">Settings</span>
     <span class="mt-4"></span>
     <mat-divider class="mt-4 mb-8"></mat-divider>
