--- a/src/app/main/pages/member/dashboard/dashboard.component.html
+++ b/src/app/main/pages/member/dashboard/dashboard.component.html
@@ -14,9 +14,9 @@
     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        <!-- The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
         A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        bred for hunting. -->
       </p>
     </mat-card-content>
     <mat-card-actions>
