--- a/src/app/main/pages/member/dashboard/dashboard.component.html
+++ b/src/app/main/pages/member/dashboard/dashboard.component.html
@@ -1,29 +1,32 @@
 <app-page title="Dashboard">
 
 
-<section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
-  <mat-card class="dashboard-tile mb-8" fxFlex="0 0 calc(25%-20px)" *ngFor="let productContext of productContexts">
-    <mat-card-header>
-      <mat-icon mat-card-avatar class="header-icon" [fontSet]="productContext.fontSet" [fontIcon]="productContext.icon"></mat-icon>
+  <section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
+    <mat-card class="dashboard-tile mb-8" fxFlex="0 0 calc(25%-20px)" *ngFor="let productContext of productContexts">
+      <mat-card-header>
+        <mat-icon mat-card-avatar class="header-icon" [fontSet]="productContext.fontSet"
+          [fontIcon]="productContext.icon"></mat-icon>
 
 
-      <!-- <div mat-card-avatar class="example-header-image"></div> -->
-      <mat-card-title>{{productContext.name}}</mat-card-title>
-      <mat-card-subtitle>{{productContext.stage}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        <!-- The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        <!-- <div mat-card-avatar class="example-header-image"></div> -->
+        <mat-card-title>{{productContext.name}}</mat-card-title>
+        <mat-card-subtitle>{{productContext.stage}}</mat-card-subtitle>
+      </mat-card-header>
+      <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+      <ng-container>
+        <mat-card-content>
+          <p>
+            <!-- The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
         A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
         bred for hunting. -->
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <!-- <button mat-button>LIKE</button> -->
-      <button mat-button>SMART ACTIONS</button>
-    </mat-card-actions>
-  </mat-card>
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <!-- <button mat-button>LIKE</button> -->
+          <button mat-button>SMART ACTIONS</button>
+        </mat-card-actions>
+      </ng-container>
+    </mat-card>
 
-</section>
+  </section>
 </app-page>
