--- a/src/app/shared/layout/layout-main/options/app-settings/app-settings.component.html
+++ b/src/app/shared/layout/layout-main/options/app-settings/app-settings.component.html
@@ -1,17 +1,11 @@
-<app-page title="Settings">
+<app-options-wrapper title="Settings">
 
-  <p class="flex flex-col mr-4">
-    <!-- <span class="text-2xl font-semibold text-white-200">Settings</span>
-    <span class="mt-4"></span>
-    <mat-divider class="mt-4 mb-8"></mat-divider>
-    <span class="mb-8"></span> -->
-
-
+  <p class="flex flex-col">
 
     <mat-form-field appearance="fill">
       <mat-label>Selected Tenants</mat-label>
       <mat-select [(ngModel)]="selectedTenants" multiple>
-        <mat-option *ngFor="let tenant of globalTenants" [value]="tenant">{{tenant.name}}</mat-option>
+        <mat-option *ngFor="let tenant of globalTenants$ | async" [value]="tenant">{{tenant.name}}</mat-option>
       </mat-select>
     </mat-form-field>
 
@@ -30,36 +24,4 @@
       <mat-hint>Hint</mat-hint>
     </mat-form-field>
   </p>
-</app-page>
-
-<!-- <mat-toolbar>
-  <mat-toolbar-row>
-    <span class="text-2xl font-semibold text-white-200">Settings</span>
-  </mat-toolbar-row>
-</mat-toolbar> -->
-
-
-<!-- <p>
-  <mat-form-field appearance="standard">
-    <mat-label>Standard form field</mat-label>
-    <input matInput placeholder="Placeholder">
-    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-    <mat-hint>Hint</mat-hint>
-  </mat-form-field>
-</p>
-<p>
-  <mat-form-field appearance="fill">
-    <mat-label>Fill form field</mat-label>
-    <input matInput placeholder="Placeholder">
-    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-    <mat-hint>Hint</mat-hint>
-  </mat-form-field>
-</p>
-<p>
-  <mat-form-field appearance="outline">
-    <mat-label>Outline form field</mat-label>
-    <input matInput placeholder="Placeholder">
-    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-    <mat-hint>Hint</mat-hint>
-  </mat-form-field>
-</p> -->
+</app-options-wrapper>
