--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,11 @@
-<app-layout-main></app-layout-main>
+<app-layout-main>
+
+  <ng-template #toolbarOptions>
+    <app-toolbar-user></app-toolbar-user>
+
+  </ng-template>
+
+</app-layout-main>
 
 
 
