--- a/src/app/shared/layout/layout-main/layout-main.component.html
+++ b/src/app/shared/layout/layout-main/layout-main.component.html
@@ -1,4 +1,8 @@
-<app-toolbar></app-toolbar>
+<app-toolbar>
+  <ng-template #toolbarExtraOptions>
+    <ng-container *ngIf="toolbarOptions" [ngTemplateOutlet]="toolbarOptions"></ng-container>
+  </ng-template>
+</app-toolbar>
 
 
 <mat-drawer-container class="sidenav-container" autosize>
