--- a/src/app/main/options/toolbar-user/toolbar-user.component.html
+++ b/src/app/main/options/toolbar-user/toolbar-user.component.html
@@ -1,11 +1,3 @@
-<!-- <button #overlayTarget (mouseover)="showOverlay()" (mouseout)="hideOverlay()" mat-icon-button  class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
-(click)="optionsService.toggleOptions('settings')">
-<mat-icon>settings</mat-icon>
-</button>
-
-<app-custom-overlay [target]="overlayTarget"></app-custom-overlay> -->
-
-
 <button mat-icon-button="" class="submitButton" (mouseover)="showOverlay()" (mouseout)="hideOverlay()"
   (click)="optionsService.toggleOptions('settings')">
   <mat-icon fontSet="fas" fontIcon="fa-user-circle" style="font-size:23px;"></mat-icon>
@@ -45,11 +37,24 @@
         <span class="text-lg font-light italic text-gray-900">{{user.fullName}}</span>
         <span class="text-lg font-light italic text-gray-900">{{user.email}}</span>
       </section>
+
+      <mat-divider></mat-divider>
+
       <mat-chip-list *ngIf="userRoles$ | async as userRoles" class="example-chip " cdkDropList
         cdkDropListOrientation="horizontal">
         <mat-chip class="example-box" [color]="(currentRole$ | async)?.name == role.name ? 'primary' : null"
           [selected]="(currentRole$ | async)?.name == role.name" cdkDrag *ngFor="let role of userRoles">
           {{role.name}}
+        </mat-chip>
+      </mat-chip-list>
+
+      <mat-divider></mat-divider>
+
+      <mat-chip-list *ngIf="globalTenants$ | async as globalTenants" class="example-chip " cdkDropList
+        cdkDropListOrientation="horizontal">
+        <mat-chip class="example-box" [color]="someDefaultTenants(tenant.tenantName) ? 'primary' : null"
+          [selected]="someDefaultTenants(tenant.tenantName)" cdkDrag *ngFor="let tenant of globalTenants">
+          {{tenant.tenantName}}
         </mat-chip>
       </mat-chip-list>
 
