--- a/src/app/main/pages/member/components/overview/overview.component.html
+++ b/src/app/main/pages/member/components/overview/overview.component.html
@@ -38,6 +38,12 @@
     </mat-expansion-panel-header>
 
     <div fxFlex="0 0 100%" fxLayout="row wrap" fxLayout="flex-start baseline" fxLayoutGap="20px">
+
+
+    <app-medicaid-header class="dashboard-tile mb-8" fxFlex="0 0 calc(20%-20px)" fxFlex.md="0 0 calc(25%-20px)"></app-medicaid-header>
+    <app-lis-header class="dashboard-tile mb-8" fxFlex="0 0 calc(20%-20px)" fxFlex.md="0 0 calc(25%-20px)"></app-lis-header>
+
+
       <mat-card fxFlex="0 0 calc(20%-20px)" fxFlex.md="0 0 calc(25%-20px)"
         *ngFor="let productContext of productContexts" [matBadge]="productContext.notifications ? '!': 'ok'"
         [matBadgeColor]="productContext.notifications ? 'warn': 'primary'" class="mb-8">
