--- a/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
+++ b/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
@@ -7,7 +7,7 @@
       </section>
 
 
-      <section *ngIf="optionsContent">
+      <section class="flex gap-2" *ngIf="optionsContent">
         <ng-container [ngTemplateOutlet]="optionsContent"></ng-container>
       </section>
 
