--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -7,6 +7,9 @@
       <button type="submit">
         Create
       </button>
+
+      <app-bank-account></app-bank-account>
+
     </form>
 
   </section>
