fix implementation. axie infinity module and banking

--- a/src/app/main/pages/settings/banking/banking.component.html
+++ b/src/app/main/pages/settings/banking/banking.component.html
@@ -1,6 +1,6 @@
 <app-page title="Banking" icon="account_balance">
   <section fxLayout="row wrap" fxLayoutGap="20px" class="h-full" fxLayoutAlign="flex-start baseline">
-    <mat-tab-group mat-align-tabs="start">
+    <mat-tab-group fxFlex="100%">
       <mat-tab label="Payment Methods">
 
         <!-- <app-payment-method-list></app-payment-method-list>
