banking implementation. fixing page styling by expanding it

--- a/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
+++ b/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
@@ -19,7 +19,7 @@
 </section> -->
 
   <section fxFlex class="pt-4 overflow-y-auto">
-    <section class="mx-4">
+    <section fxFlex="auto" class="column mx-4 max-h-full">
       <ng-content></ng-content>
     </section>
   </section>
