--- a/src/app/main/pages/settings/banking/banking.component.html
+++ b/src/app/main/pages/settings/banking/banking.component.html
@@ -1,15 +1,24 @@
 <app-page title="Banking" icon="account_balance">
-  <section fxLayout="row wrap" fxLayoutGap="20px" class="h-full" fxLayoutAlign="flex-start baseline">
-    <mat-tab-group fxFlex="100%">
+
+
+  <section fxFlex="auto" fxLayout="column" fxLayoutGap="20px" class="max-h-full" fxLayoutAlign="flex-start baseline">
+    <mat-tab-group fxFlex>
       <mat-tab label="Payment Methods">
+        <section class="relative">
+          <app-page title="" icon="account_balance">
 
-        <!-- <app-payment-method-list></app-payment-method-list>
+            <ng-template #optionsContent>
+              <button mat-mini-fab aria-label="New quote" (click)="newPaymentMethod($event)">
+                <mat-icon>account_balance</mat-icon>
+              </button>
+            </ng-template>
+            <app-payment-method-list></app-payment-method-list>
 
-        <app-payment-method-new></app-payment-method-new> -->
 
-      <app-bank-account></app-bank-account>
+            <app-bank-account></app-bank-account>
 
-
+          </app-page>
+        </section>
       </mat-tab>
       <mat-tab label="Transfers">
         Transfers
@@ -18,3 +27,6 @@
 
   </section>
 </app-page>
+
+
+<router-outlet key="actions"></router-outlet>
